--- a/.jfrog-pipelines/node-test.yml
+++ b/.jfrog-pipelines/node-test.yml
@@ -1,6 +1,24 @@
 template: true
 valuesFilePath: ./values.yml
 
+resources:
+ - name: connecting_resource_node_test
+   type: PropertyBag
+   configuration:
+     key1: value1
+     key2: value2
+ - name: resource_pipelines
+   type: GitRepo
+   configuration:
+     gitProvider: github_neha
+     path: agrasth/pipelines
+     files: 
+       include: ^README.md$
+     branches:
+       include: ^{{gitBranch}}$
+#      buildOn:
+#        commit: true
+
 pipelines:
   - name: pipelines_node_test
     steps:
